[tool.poetry]
name = "loop-mbox-upload"
version = "0"
description = "Upload emails from an MBOX archive to Loop"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "loop_mbox_upload"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.11"
flake8-import-order = "^0.18.1"
flake8-json = "^21.7.0"
mypy = "^0.971"
pylint = "^2.15.2"
types-requests = "^2.28.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pylint.basic]
disable = ["line-too-long,logging-fstring-interpolation,unused-variable,wrong-import-order"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 120

[tool.pylint.variables]
allow-global-unused-variables = false
